--- a/ZadanieNaAvtomatKolleg/packages.config
+++ b/ZadanieNaAvtomatKolleg/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Azure.Core" version="1.38.0" targetFramework="net48" />
+  <package id="Azure.Identity" version="1.11.4" targetFramework="net48" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
-  <package id="Microsoft.Data.SqlClient" version="1.1.3" targetFramework="net48" />
-  <package id="Microsoft.Data.SqlClient.SNI" version="1.1.0" targetFramework="net48" />
+  <package id="Microsoft.Data.SqlClient" version="5.2.2" targetFramework="net48" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="5.2.0" targetFramework="net48" />
   <package id="Microsoft.EntityFrameworkCore" version="3.1.32" targetFramework="net48" />
   <package id="Microsoft.EntityFrameworkCore.Abstractions" version="3.1.32" targetFramework="net48" />
   <package id="Microsoft.EntityFrameworkCore.Analyzers" version="3.1.32" targetFramework="net48" />
@@ -24,12 +26,14 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.32" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="3.1.32" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.32" targetFramework="net48" />
-  <package id="Microsoft.Identity.Client" version="3.0.8" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.Protocols" version="5.5.0" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.5.0" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.5.0" targetFramework="net48" />
+  <package id="Microsoft.Identity.Client" version="4.61.3" targetFramework="net48" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.61.3" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.35.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.35.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.35.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.35.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.35.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.35.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net48" />
@@ -37,6 +41,7 @@
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.ClientModel" version="1.0.0" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
@@ -46,22 +51,24 @@
   <package id="System.Console" version="4.3.0" targetFramework="net48" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net48" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.1" targetFramework="net48" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net48" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net48" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net48" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.35.0" targetFramework="net48" />
   <package id="System.Interactive.Async" version="3.0.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Linq" version="4.3.0" targetFramework="net48" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net48" />
   <package id="System.Linq.Queryable" version="4.0.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Memory.Data" version="1.0.2" targetFramework="net48" />
   <package id="System.Net.Http" version="4.3.0" targetFramework="net48" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net48" />
@@ -72,23 +79,29 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.ProtectedData" version="4.7.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="4.7.2" targetFramework="net48" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net48" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net48" />
   <package id="Unity" version="5.11.10" targetFramework="net48" />
